# CameraTracking

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
include/Camera/: Camera.h  IPCam.h  Webcam.h
include/CannyEdgeDetector/: CannyEdgeDetector.h
include/DebugDisplay/: DebugDisplay.h
include/HOG/: HOG.h
include/IPCamManager/: IPCamManager.h
include/LocalCameraManager/: LocalCameraManager.h
include/LocalCameras/: LocalCameras.h
include/ResizablePriorityQueue/: ConstSizeBinaryHeap.h  ConstSizeMinBinaryHeap.h  ResizablePriorityQueue.h
include/SVMTrainer/: SVMTrainer.h
include/SeamCarver/: ImageDimensionStruct.h  PixelEnergy2D.h  SeamCarver.h  SeamCarverKeepout.h
matlab/: BlockNormalize.m  GetHistogram.m  HOG.m  Sobel.m
src/: CMakeLists.txt
src/Camera/: CMakeLists.txt  Camera.cpp  IPCam.cpp  IPCamTest.cpp  Webcam.cpp  WebcamTest.cpp
src/CannyEdgeDetector/: CMakeLists.txt  CannyEdgeDetector.cpp  CannyEdgeDetectorTest.cpp
src/HOG/: CMakeLists.txt  HOG.cpp
src/IPCamManager/: CMakeLists.txt  IPCamManager.cpp  IPCamManagerTest.cpp
src/LocalCameraManager/: CMakeLists.txt  LocalCameraManager.cpp  LocalCameraManagerTest.cpp
src/LocalCameras/: CMakeLists.txt  LocalCameras.cpp
src/ResizablePriorityQueue/: CMakeLists.txt  ResizablePriorityQueueTest.cpp
src/SVMTrainer/: CMakeLists.txt  SVMTrainer.cpp
src/SeamCarver/: CMakeLists.txt  PixelEnergy2D.cpp  PixelEnergy2DTest.cpp  SeamCarver.cpp  SeamCarverKeepout.cpp  SeamCarverTest.cpp
src/WebcamCanny/: CMakeLists.txt  WebcamCannyTest.cpp
